[package]
name = "open-ambient"
version = "0.4.0"
description = "Open files and directories with constant paths"
authors = ["Dan Gohman <dev@sunfishcode.online>"]
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["io"]
categories = ["rust-patterns"]
repository = "https://github.com/sunfishcode/open-ambient"
exclude = ["/.github"]

[dependencies]
cap-std = "3.0.0"
